# demand-copilot

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/: base.py  registry.py  rossmann.py  synthetic.py  uploaded.py
backend/app/agents/: chat_agent.py  graph.py  llm.py  mock_crew.py  nodes.py  runner.py  state.py  tools.py
backend/app/core/: config.py  events.py  schema.py
backend/app/rag/: knowledge.py  store.py
backend/app/services/: e2b_viz.py  profiler.py
backend/app/tools/: enrichers.py  forecast_tool.py  search_tool.py
backend/data/uploads/: _active.json
backend/data/uploads/upload-demand-forecasting-dataset-1-615e60ee/: profile.json
backend/data/uploads/upload-intc-d2733540/: data.csv  profile.json
backend/tests/: test_chat_agent.py  test_crew.py  test_datasets.py  test_forecast.py  test_smoke.py
frontend/: Dockerfile  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: types.ts  useChat.ts  useForecastStream.ts
