[project]
name = "demand-copilot-backend"
version = "0.1.0"
description = "Agentic demand-forecasting co-pilot backend (FastAPI + LangGraph)"
requires-python = ">=3.12"

# P0 keeps deps lean: web + streaming + config only, so the first build is fast
# and the streaming pipe is verifiable. Heavier deps are added per phase:
#   P2: statsforecast, pandas, numpy        (real forecast tool)
#   P3: langgraph, langchain-google-genai, chromadb  (real agents + RAG)
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
