[project]
name = "demand-copilot-backend"
version = "0.1.0"
description = "Agentic demand-forecasting co-pilot backend (FastAPI + LangGraph)"
requires-python = ">=3.12"

dependencies = [
    # web + streaming + config
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    # forecast tool (P2)
    "statsforecast>=1.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "openpyxl>=3.1",
    # agent crew + LLM (P3) — Gemini is optional at runtime; lib is always present
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "e2b-code-interpreter>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
